# modelbase-migrate

./: pyproject.toml
tests/assets/: models.py
