[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "modelbase-migrate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "modelbase>=1.57.18",
    "pytest>=8.3.5",
]

[tool.hatchling]
from = "src"
include = ["modelbase_migrate"]
